<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Principal"
    android:orientation="vertical"
    tools:context=".CadastroFilme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_voltar" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/cadastro_filmes"
            android:textColor="@color/Secundária"
            android:textSize="20sp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/Secundária"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_nome_filme"
            android:textColorHint="@color/hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_categoria"
            android:textColorHint="@color/hint" />

        <EditText

            android:digits="012345"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_avaliacao"
            android:textColorHint="@color/hint" />

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@color/Destaque"
            android:text="@string/adicionar"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>

